# model-port-gateway

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Justfile  README.md  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
configs/: model_manifest.edge_classifier.v0.3.0.yaml  model_manifest.edge_classifier.yaml  model_manifest.example.yaml  train.edge_classifier.v0.2.0.yaml  train.edge_classifier.v0.3.0.yaml  train.smolvlm.v0.1.1.yaml  train.smolvlm.yaml
docker/: Dockerfile
docs/: README.md  architecture.md
infra/: README.md
infra/compose/: README.md
infra/k8s/: README.md
model_port/api/: main.py
model_port/common/: config.py  dataset.py  images.py  metadata.py  quality.py  tracking.py
model_port/pipelines/: compare_runtime_reports.py  eval_wandb.py  evaluate.py  evaluate_classifier.py  evaluate_classifier_onnx.py  export_classifier_onnx.py  finetune.py  runtime_compare.py  train_classifier.py
model_port/registry/: build_manifest.py  store.py  sync_wandb_alias.py  vendor_submit.py  wandb_register.py  wandb_utils.py
scripts/: prepare_cifar10_dataset.py  prepare_sample_dataset.py  prepare_scene_dataset.py  write_demo_eval_report.py
tests/: test_common.py  test_evaluate.py  test_manifest.py
